--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,15 +2,15 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Build (andromeda)",
+            "label": "Build (mowteng)",
             "type": "shell",
-            "command": "/nix/config/.vscode/tasks/build.sh andromeda",
+            "command": "/nix/config/.vscode/tasks/build.sh mowteng",
             "problemMatcher": []
         },
         {
-            "label": "Build (thinkpad)",
+            "label": "Build (homeassistant)",
             "type": "shell",
-            "command": "/nix/config/.vscode/tasks/build.sh thinkpad",
+            "command": "/nix/config/.vscode/tasks/build.sh homeassistant",
             "problemMatcher": []
         },
         {
@@ -22,7 +22,7 @@
         {
             "label": "Update flake.lock",
             "type": "shell",
-            "command": "sudo nix flake update /nix/config",
+            "command": "nix flake update",
             "problemMatcher": []
         }
     ]
