--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -1,6 +1,6 @@
 on: [push]
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: 
     steps:
-      - run: uname -a
+      - run: nixos-rebuild --flake .#mowteng build
