Switch browser from Firefox to Floorp and minor updates
The commit changes the default browser across the system and includes various
cleanup/config updates like simplifying wallpaper config, adjusting Zed
assistant settings, and disabling ESPHome service.

--- a/.zed/tasks.json
+++ b/.zed/tasks.json
@@ -10,7 +10,7 @@
   },
   {
     "label": "build homeassistant",
-    "command": "./.zed/bin/build.sh mowteng",
+    "command": "./.zed/bin/build.sh homeassistant",
     "shell": "system",
     // Whether to show the task line in the output of the spawned task, defaults to `true`.
     "show_summary": true,
