Add boot mowteng task

--- a/.zed/tasks.json
+++ b/.zed/tasks.json
@@ -9,6 +9,12 @@
     "show_output": true
   },
   {
+    "label": "boot mowteng",
+    "command": "./boot.sh mowteng",
+    "show_summary": true,
+    "show_output": true
+  },
+  {
     "label": "build homeassistant",
     "command": "./.zed/bin/build.sh homeassistant",
     "shell": "system",
